# ginkgo

./: Cargo.toml  Readme.md
src/: command.rs  display.rs  edit.rs  editor.rs  file.rs  fileviewer.rs  main.rs  model.rs  status.rs  syntax.rs  terminalcontroller.rs  terminalview.rs  ui.rs
src/syntax/: mod.rs  syntaxengine.rs
src/syntax/definitions/: c_syntax.yaml
test/: test.c  test2.c
