[package]
name = "ginkgo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19"
clap = "2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
fancy-regex = "0.7.1"
syntect = "4.6.0"